fixed alignment and design

--- a/src/assets/css/activate-step1.css
+++ b/src/assets/css/activate-step1.css
@@ -22,7 +22,7 @@ position: absolute;
 left: 1rem;
 top: 15px;
 background: grey;
-width: 98%;
+width: 95%;
 height: 2px;
 transform: translateX(-1%);
 z-index: -10;
@@ -101,66 +101,37 @@ background-color: #333;
 .col-fonts{
     color: black;
 }
-.container-carousel{
+/* .container-carousel{
     width: 1150px;
     padding: 5px;
-}
-
-.carousel-image {
-    width: 500px;
-}
+} */
 
 .image-3 {
-    width: 500px;
-    height: 400px;
+    width: 600px;
+    height: 460px;
 }
 .image-2 {
-    width: 450px;
-    height: 396px;
+    width: 600px;
+    height: 456px;
 }
 .image-1 {
-    width: 380px;
-    height: 392px;
+    width: 600px;
+    height: 454px;
 }
 
-.custom-carousel-indicators {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin-right: 15%;
-    margin-bottom: 1rem;
-    margin-left: 15%;
-    list-style: none;
-  }
-  .custom-carousel-indicators [data-bs-target] {
-    box-sizing: content-box;
-    flex: 0 1 auto;
-    width: 30px;
-    height: 3px;
-    padding: 0;
-    margin-right: 3px;
-    margin-left: 3px;
-    text-indent: -999px;
-    cursor: pointer;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 0;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    opacity: 0.5;
-    transition: opacity 0.6s ease;
-  }
   @media (prefers-reduced-motion: reduce) {
     .custom-carousel-indicators [data-bs-target] {
       transition: none;
     }
   }
-  .custom-carousel-indicators .active {
+ 
+  .carousel-indicators .active {
     opacity: 1;
+    background-color: var(--vt-c-purple) !important;
   }
-  
+
+ @media (max-width: 576px) {
+  .image-3 {
+    display: none;
+  }
+}
